fixing layout issues with chrome

--- a/src/css/admin_css/AdminBioPage.scss
+++ b/src/css/admin_css/AdminBioPage.scss
@@ -112,6 +112,7 @@
                 box-shadow: 1px 1px 1px rgba($color-blue, .6);
                 margin-bottom: 3rem;
                 min-height: 20rem;
+                font-size: 1.75rem;
 
                 &::placeholder {
                     color: $color-dkgreen;
